--- a/info.html
+++ b/info.html
@@ -98,7 +98,7 @@
                             <a id="aboutImage_next" class="image_slider_next" href="#"></a>
                             <div class="caroufredsel_wrapper">
                                 <ul id="aboutImage" class="image-slider slides">
-                                    <li><img src="metallixx-min.png" alt=""></li>
+                                    <li><img src="metallixx-min.jpg" alt=""></li>
                                    
                                 </ul>
                             </div>
