--- a/gnosis.html
+++ b/gnosis.html
@@ -29,7 +29,7 @@
         <table class="doc-loader">
             <tr>
                 <td>
-                    <img src="ajax-loader.gif" alt="Loading..." />
+                    <img src="cube.gif" alt="Loading..." />
                 </td>
             </tr>
         </table>
