--- a/info.html
+++ b/info.html
@@ -197,7 +197,7 @@
 <div class="w3-container">
  
   
-  <a href="https://amishra1508.github.io/metallix2k19/bplan.html" class="w3-button w3-round-xxlarge w3-indigo">Know More</a>
+  <a href="https://amishra1508.github.io/metallix2k19/bplan.html" class="w3-button w3-round-xxlarge w3-indigo w3-mobile">Know More</a>
 </div>                                                    
                                                
                                             </div>
@@ -212,7 +212,7 @@
                                                 <div class="w3-container">
  
   
-  <a href="https://amishra1508.github.io/metallix2k19/scroll.html" class="w3-button w3-round-xxlarge w3-pink">Know More</a>
+  <a href="https://amishra1508.github.io/metallix2k19/scroll.html" class="w3-button w3-round-xxlarge w3-pink w3-mobile">Know More</a>
 </div>  
                                             </div>
                                         </div>
@@ -228,7 +228,7 @@
                                                 <div class="w3-container">
  
   
-  <a href="https://amishra1508.github.io/metallix2k19/scribe.html" class="w3-button w3-round-xxlarge w3-purple">Know More</a>
+  <a href="https://amishra1508.github.io/metallix2k19/scribe.html" class="w3-button w3-round-xxlarge w3-purple w3-mobile">Know More</a>
 </div>  
                                             </div>
                                         </div>
@@ -242,7 +242,7 @@
                                                 <div class="w3-container">
  
   
-  <a href="https://amishra1508.github.io/metallix2k19/gnosis.html" class="w3-button w3-round-xxlarge w3-amber">Know More</a>
+  <a href="https://amishra1508.github.io/metallix2k19/gnosis.html" class="w3-button w3-round-xxlarge w3-amber w3-mobile">Know More</a>
 </div>  
                                             </div>
                                         </div>
@@ -256,7 +256,7 @@
                                                 <div class="w3-container">
  
   
-  <a href="https://amishra1508.github.io/metallix2k19/talaash.html" class="w3-button w3-round-xxlarge w3-green">Know More</a>
+  <a href="https://amishra1508.github.io/metallix2k19/talaash.html" class="w3-button w3-round-xxlarge w3-green w3-mobile">Know More</a>
 </div>  
                                             </div>
                                         </div>
@@ -270,7 +270,7 @@
                                                 <div class="w3-container">
  
   
-  <a href="https://amishra1508.github.io/metallix2k19/specio.html" class="w3-button w3-round-xxlarge w3-deep-orange">Know More</a>
+  <a href="https://amishra1508.github.io/metallix2k19/specio.html" class="w3-button w3-round-xxlarge w3-deep-orange w3-mobile">Know More</a>
 </div>  
                                             </div>
                                         </div>
