--- a/info.html
+++ b/info.html
@@ -188,9 +188,9 @@
                                     <div class="service-holder ">
                                         <img src="demo-images/icon_01.png" alt="icon1">
                                         <div class="service-content-holder">
-                                            <div class="service-title">
+                                           
 
-                                                <a href="https://amishra1508.github.io/metallix2k19/bplan.html" target="_blank">BUSINESS PLAN (WALL STREET)</a></div>
+                                                <h1 href="https://amishra1508.github.io/metallix2k19/bplan.html" target="_blank">BUSINESS PLAN (WALL STREET)</h1>
                                             <div class="service-content">
                                               If you don't drive your business, you will be driven out of business                                                <br> - B.C Forbes.<br />
                                                 
