--- a/info.html
+++ b/info.html
@@ -190,7 +190,7 @@
                                         <div class="service-content-holder">
                                            
 
-                                                <h1 href="https://amishra1508.github.io/metallix2k19/bplan.html" target="_blank">BUSINESS PLAN (WALL STREET)</h1>
+                                                <a href="https://amishra1508.github.io/metallix2k19/bplan.html" target="_blank">BUSINESS PLAN (WALL STREET)</a>
                                             <div class="service-content">
                                               If you don't drive your business, you will be driven out of business                                                <br> - B.C Forbes.<br />
                                                 
