--- a/info.html
+++ b/info.html
@@ -43,6 +43,7 @@
   color: white;
   padding: 16px;
   font-size: 16px;
+    font-family: Roboto;
   border: none;
 }
 
@@ -88,7 +89,7 @@
                     <li><a href="#schedule">Schedule</a></li>
                     <li><a href="#contact">Contact</a></li>
                                   <div class="dropdown">
-  <a class="dropbtn">REGISTER</a>
+  <button class="dropbtn">REGISTER</button>
   <div class="dropdown-content">
     <a href="https://amishra1508.github.io/metallix2k19/bplan.html">Wall Street</a>
     <a href="https://amishra1508.github.io/metallix2k19/scroll.html">Scroll</a>
